[workspace.package]
name = "vulner"
version = "0.7.0"
authors = ["mrl5"]
edition = "2021"
description = "Discover CVEs for software"
license = "MPL-2.0"
keywords = ["cve", "cpe", "nvd", "linux", "funtoo", "gentoo"]
categories = ["command-line-utilities"]

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
members = [
    "crates/cli",
    "crates/cpe-tag",
    "crates/os-adapter",
    "crates/package-model",
    "crates/security-advisories",
]

[workspace.dependencies]
cli = { path = "./crates/cli" }
cpe-tag = { path = "./crates/cpe-tag" }
os-adapter = { path = "./crates/os-adapter" }
package-model = { path = "./crates/package-model" }
security-advisories = { path = "./crates/security-advisories" }

atty = "^0"
confy = "^0"
env_logger = "^0"
futures-core = "^0"
futures-util = "^0"
grep-matcher = "^0"
grep-regex = "^0"
grep-searcher = "^0"
indicatif = "^0"
jsonschema = { version = "^0", default-features = false }
lazy_static = "^1"
log = "^0"
once_cell = "^1"
pyo3 = { version = "^0", features = ["auto-initialize"] }
pythonize = "^0"
rayon = "^1"
regex = "^1"
reqwest = { version = "^0", features = ["gzip", "json", "stream"] }
secrecy = "^0"
serde = { version = "^1",  features = ["derive"] }
serde_json = "^1"
sha2 = "^0"
structopt = "^0"
time = "^0"
tokio = { version = "^1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
tokio-stream = "^0"
tokio-util = { version = "^0", features = ["io"] }
