[package]
name = "cli"
version = "0.1.0"
authors = ["mrl5"]
edition = "2021"
description = "Discover CVEs for packages installed by the portage"
license = "MPL-2.0"
keywords = ["cve", "cpe", "nvd", "linux", "funtoo", "gentoo"]
categories = ["command-line-utilities"]

[[bin]]
name = "vulner"
path = "src/main.rs"

[dependencies]
cpe-tag = { path = "../cpe-tag" }
security-advisories = { path = "../security-advisories" }
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.26"
tokio = { version = "1.15.0", features = ["fs", "macros", "process", "rt-multi-thread"] }
