[package]
name = "cli"
version = "0.3.0"
authors = ["mrl5"]
edition = "2021"
description = "Discover CVEs for software"
license = "MPL-2.0"
keywords = ["cve", "cpe", "nvd", "linux", "funtoo", "gentoo"]
categories = ["command-line-utilities"]

[[bin]]
name = "vulner"
path = "src/main.rs"

[dependencies]
cpe-tag = { path = "../cpe-tag" }
os-adapter = { path = "../os-adapter" }
security-advisories = { path = "../security-advisories" }
env_logger = "0.9.0"
log = "0.4.14"
serde_json = "1.0.78"
sha2 = "0.10.1"
structopt = "0.3.26"
tokio = { version = "1.15.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.6.9", features = ["io"] }
atty = "0.2.14"
once_cell = "1.9.0"
chrono = "0.4.19"
reqwest = "0.11.9"
