[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "vulner"
path = "src/main.rs"

[dependencies]
cpe-tag.workspace = true
os-adapter.workspace = true
package-model.workspace = true
security-advisories.workspace = true

atty.workspace = true
confy.workspace = true
env_logger.workspace = true
log.workspace = true
once_cell.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
structopt.workspace = true
time.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
