[package]
name = "cpe-tag"
version = "0.3.1"
authors = ["mrl5"]
edition = "2021"
description = "Generates valid NVD CPEs"
license = "MPL-2.0"
keywords = ["cpe", "nvd", "linux"]

[package.metadata.workspaces]
independent = true

[dependencies]
security-advisories = { path = "../security-advisories" }
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }
log = "0.4.14"
jsonschema = "0.14.0"
serde_json = "1.0.78"
serde = "1.0.136"
pythonize = "0.15.0"
regex = "1.5.5"
lazy_static = "1.4.0"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"

[features]
