[package]
name = "cpe-tag"
version = "0.3.1"
authors = ["mrl5"]
edition = "2021"
description = "Generates valid NVD CPEs"
license = "MPL-2.0"
keywords = ["cpe", "nvd", "linux"]

[package.metadata.workspaces]
independent = true

[dependencies]
package-model = { path = "../package-model" }
security-advisories = { path = "../security-advisories" }
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }
log = "0.4.14"
jsonschema = { version = "0.14.0", default-features = false }
serde_json = "1.0.78"
regex = "1.5.5"
pythonize = "0.15.0"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"

[features]
