[package]
name = "cpe-tag"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Generates valid NVD CPEs"
license.workspace = true
keywords = ["cpe", "nvd", "linux"]

[dependencies]
package-model.workspace = true
security-advisories.workspace = true

grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
jsonschema.workspace = true
log.workspace = true
pyo3.workspace = true
pythonize.workspace = true
regex.workspace = true
serde_json.workspace = true
