[package]
name = "os-adapter"
version = "0.5.0"
authors = ["mrl5"]
edition = "2021"
description = "Adapter for OSes supported by vulner"
license = "MPL-2.0"
keywords = ["os", "adapter"]

[package.metadata.workspaces]
independent = true

[dependencies]
package-model = { path = "../package-model" }
log = "0.4.14"
