[package]
name = "package-model"
version = "0.1.0"
authors = ["mrl5"]
edition = "2021"
description = "Package model"
license = "MPL-2.0"
keywords = ["package", "model"]

[package.metadata.workspaces]
independent = true

[dependencies]
regex = "1.5.5"
lazy_static = "1.4.0"
serde = { version = "1.0.136",  features = ["derive"] }
