[package]
name = "security-advisories"
version = "0.2.0"
authors = ["mrl5"]
edition = "2021"
description = "Interacts with security advisory services"
license = "MPL-2.0"
keywords = ["cpe", "cve", "cna", "security", "advisory"]

[package.metadata.workspaces]
independent = true

[dependencies]
futures-core = "0.3.19"
futures-util = "0.3.19"
indicatif = "0.16.2"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["gzip", "json", "stream"] }
serde_json = "1.0.78"
serde = "1.0.136"
tokio = { version = "1.15.0", features = ["fs"] }
