[package]
name = "security-advisories"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Interacts with security advisory services"
license.workspace = true
keywords = ["cpe", "cve", "cna", "security", "advisory"]

[dependencies]
os-adapter.workspace = true

futures-core.workspace = true
futures-util.workspace = true
indicatif.workspace = true
log.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
